--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "express": "3.0.6",
     "jade": ">= 0.0.1",
-    "marked": "0.2.5"
+    "marked": "0.2.5",
+    "captchagen": "0.0.2"
   },
   "subdomain": "sirkitree.angular-express-posterboy",
   "scripts": {
