--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "express": "3.0.x",
     "jade": ">= 0.0.1",
-    "marked": "0.2.5",
-    "captchagen": "0.0.2"
+    "marked": "0.2.5"
   }
 }
